<resources>
    <string name="app_name">Attendece Taker</string>
    <string name="OpenDrawer">Open</string>
    <string name="CloseDrawer">Close</string>

    <string name="top_icon">TOP ICON</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="retypePassword">Retype Password</string>
    <string name="login">SEARCH</string>
    <string name="login1">UPDATE</string>
    <string name="login2">SIGN IN</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>